--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,13 @@
 version: '3.8'
 
 services:
-  db:
-    build: ./db_docker
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=leaderboard_db
-    ports:
-      - "5432:5432"
   app:
     build: ./backend
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       - DB_HOST=db
       - DB_PORT=5432
@@ -27,12 +20,36 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
 
+  db:
+    build: ./db_docker
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=leaderboard_db
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   redis:
     image: "redis:alpine"
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    
+    depends_on:
+      - app
 
 volumes:
   redis_data:
